--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 	id="WebApp_ID" version="3.1">
 	<display-name>MVCFilmSite</display-name>
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>home.do</welcome-file>
 	</welcome-file-list>
 	<servlet>
 		<servlet-name>home</servlet-name>
